# tech-pulse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.run/: techpulse.bot.run.xml  techpulse.cli.run.xml
src/techpulse/: bootstrap.py  cli.py  config.py  logging.py
src/techpulse/agent/: system_prompt.py
src/techpulse/agent/constants/: system_promt.py
src/techpulse/agent/core/: agent.py  events.py  tool_registry.py
src/techpulse/agent/tools/: base.py  channel_tools.py  digest_tool.py  github_tools.py  interests_tools.py  repo_tools.py  submit_summary_tool.py  youtube_data_tools.py  youtube_transcript_tools.py
src/techpulse/bot/: bot.py  formatters.py
src/techpulse/integrations/github/: github_client.py  models.py
src/techpulse/persistence/: channel_repository.py  redis_client.py  release_repository.py  repo_repository.py  user_interests_repository.py  video_repository.py
src/techpulse/pipeline/: models.py
src/techpulse/workers/: digest_worker.py  github_worker.py
tests/agent/tools/: test_channel_tools.py  test_digest_tool.py  test_fetch_video_metadata_tool.py  test_github_tools.py  test_interests_tools.py  test_list_transcripts_tool.py  test_repo_tools.py  test_submit_summary_tool.py  test_youtube_data_tools.py  test_youtube_transcript_tool.py
tests/integrations/youtube/: test_youtube_api_client.py
tests/persistence/: test_channel_repository.py  test_release_repository.py  test_repo_repository.py  test_user_interests_repository.py
tests/workers/: test_github_worker.py
(+7 files in other folders)
