[project]
name = "tech-pulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.scripts]
techpulse = "techpulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/techpulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]
