[project]
name = "tech-pulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.94.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-telegram-bot>=21.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
    "PyGithub>=2.0.0",
]

[project.scripts]
techpulse = "techpulse.bot.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/techpulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.13.5",
    "pytest-cov>=4.1.0",
    "fakeredis>=2.0.0",
]
